added jsj and css

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Page Title</title>
-</head>
-
-<body>
-
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-
-</body>
-
+    <head>
+        <title>Demo</title>
+        <script src="./index.js"></script>
+        <link rel="stylesheet" href="./index.css" />
+    </head>
+    <body>
+        <h1 class="colorbue">Mohammed Asim</h1>
+        <p class="colorRed">What is your name?</p>
+        <button onclick="getAlert('Hi from html')">Click me</button>
+    </body>
 </html>
